--- a/src/shadowbox/package.json
+++ b/src/shadowbox/package.json
@@ -14,6 +14,7 @@
     "ipaddr.js": "^1.4.0",
     "js-yaml": "^3.12.0",
     "maxmind": "^2.7.0",
+    "mkdirp": "^0.5.1",
     "randomstring": "^1.1.5",
     "request-lite": "^2.40.1",
     "restify": "^4.3.0",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/js-yaml": "^3.11.2",
     "@types/maxmind": "^2",
+    "@types/mkdirp": "^0.5.2",
     "@types/node": "^8",
     "@types/randomstring": "^1.1.6",
     "@types/restify": "^2.0.41"
