--- a/src/shadowbox/package.json
+++ b/src/shadowbox/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "ShadowsocksConfig": "Jigsaw-Code/outline-shadowsocksconfig#^v0.0.8",
     "ipaddr.js": "^1.4.0",
+    "js-yaml": "^3.12.0",
     "maxmind": "^2.7.0",
+    "prom-client": "^11.1.3",
     "randomstring": "^1.1.5",
     "request-lite": "^2.40.1",
     "restify": "^4.3.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^3.11.2",
     "@types/maxmind": "^2",
     "@types/node": "^8",
     "@types/randomstring": "^1.1.6",
